--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
       <!-- <nav>
-        nav content
+        nav contentt
       </nav> -->
       <section>
         <!-- Los elementos en bloque son el problema -->
