--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 
 
     <footer>
-      footer
+      links a redes sociales
+      elgourmet®
+      © 2010-2017
+      Contacto
+      Políticas de privacidad
+      Anúnciate
+      RSS
+      SiteMap
     </footer>
   </body>
 </html>
