--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header>
       <figure>
-        <img src="img/logo.png" alt="Logo MasterChef" id="logo">
+        <img src="img/logoText.png" alt="Logo MasterChef" id="logo">
+        <!-- <figcaption>MasterChef</figcaption> -->
       </figure>
       <nav>
         <ul>
