--- a/index.html
+++ b/index.html
@@ -31,16 +31,31 @@
         <p>Ganador del concurso</p>
     </aside>
 
-
     <footer>
-      links a redes sociales
-      elgourmet®
-      © 2010-2017
-      Contacto
-      Políticas de privacidad
-      Anúnciate
-      RSS
-      SiteMap
+      <div id="imgContent">
+        <figure>
+          <a href="#"><img src="img/facebook.png" alt="Facebook" alt=""></a>
+        </figure>
+        <figure>
+          <a href="#"><img src="img/instagram.png" alt="Instagram" alt=""></a>
+        </figure>
+        <figure>
+          <a href="#"><img src="img/twitter.png" alt="Twitter" alt=""></a>
+        </figure>
+      </div>
+      <div id="contactForm">
+        <ul>
+              <li>elgourmet® © 2010-2017</li>
+              <li>Contacto</li>
+              <li>Políticas de privacidad</li>
+
+        </ul>
+        <ul>
+              <li>Anúnciate</li>
+              <li>RSS</li>
+              <li>SiteMap</li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
