Todos los cambios.

--- a/competition.html
+++ b/competition.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
     </header>
-      <section>
+      <!-- <section>
         <ul>
           <li>Receta destacada</li>
           <li>Recetas</li>
@@ -29,8 +29,7 @@
     </section>
     <aside>
         <p>Ganador del concurso</p>
-    </aside>
-
+    </aside> -->
     <footer>
       <div id="imgContent">
         <figure>
@@ -45,15 +44,14 @@
       </div>
       <div id="contactForm">
         <ul>
-              <li>elgourmet® © 2010-2017</li>
-              <li>Contacto</li>
-              <li>Políticas de privacidad</li>
-
+          <li>elgourmet® © 2010-2017</li>
+          <li>Contacto</li>
+          <li>Políticas de privacidad</li>
         </ul>
         <ul>
-              <li>Anúnciate</li>
-              <li>RSS</li>
-              <li>SiteMap</li>
+          <li>Anúnciate</li>
+          <li>RSS</li>
+          <li>SiteMap</li>
         </ul>
       </div>
     </footer>
