Cambios en diseño.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,33 @@
         </ul>
     </section>
     <aside>
-        <p>Ganador del concurso</p>
+      <h3>Ganó Nilson</h3>
+      <p>
+        Llegó el tan esperado final de la primera temporada de
+        MasterChef Uruguay, el reality de cocina más importante del mundo,
+        ahora hecho en nuestro país.
+      </p>
+      <p>
+        En un clima de gran tensión, los cuatro participantes que todavía
+        estaban en carrera se enfrentaron uno contra uno, en dos semifinales
+         determinadas por sorteo: Lourdes vs. Nilson y Leticia vs. Nicolás.
+      </p>
+      <p>
+        Los dos ganadores, Leticia y Nilson, pasaron a la final, donde
+         tuvieron 120 minutos para sorprender al jurado con tres
+         platos: entrada, plato principal y postre. Pese a los nervios y la
+          presión de la instancia que estaban atravesando, ambos participantes
+           tuvieron un gran desempeño en la última prueba de la competencia,
+           lo que hizo que la decisión del jurado no fuera nada sencilla.
+      </p>
+      <p>
+        Finalmente, Lucía, Sergio y Laurent dieron su veredicto y Nilson
+         se convirtió en el primer maestro de la cocina de nuestro país.
+          La alegría y la emoción se apoderaron de la cocina de MasterChef
+          Uruguay y el festejo del ganador con su familia y sus excompañeros
+           fue inolvidable.
+      </p>
     </aside>
-
     <footer>
       <div id="imgContent">
         <figure>
