Cambios en el footer

--- a/competition.html
+++ b/competition.html
@@ -44,7 +44,7 @@
       </div>
       <div id="contactForm">
         <ul>
-          <li>elgourmet® © 2010-2017</li>
+          <li class="visible">elgourmet® © 2010-2017</li>
           <li>Contacto</li>
           <li>Políticas de privacidad</li>
         </ul>
