--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@
       </nav>
     </header>
       <section>
-        <ul>
-          <li>Receta destacada</li>
-          <li>Recetas</li>
-        </ul>
-    </section>
+        <h4>Receta destacada de la semana</h4>
+        <p>Pastel de Chocolate Vienés</p>
+        <p>Por Maria Avila</p>
+        <p>TIEMPO: 40 min</p>
+        <p>ORCIONES: 10</p>
+        <p>
+          Deliciosa receta de pastel de chocolate con nueces molidas preparado todo
+          en la licuadora! Prepara este delicioso pastel de en tan solo 20 minutos.
+           Ideal para compartir con la familia en una tarde lluviosa
+        </p>
+      </section>
+      <section>
+      </section>
     <aside>
       <h3>Ganó Nilson</h3>
       <p>
