--- a/index.html
+++ b/index.html
@@ -22,20 +22,7 @@
         </ul>
       </nav>
     </header>
-      <section>
-        <h4>Receta destacada de la semana</h4>
-        <p>Pastel de Chocolate Vienés</p>
-        <p>Por Maria Avila</p>
-        <p>TIEMPO: 40 min</p>
-        <p>ORCIONES: 10</p>
-        <p>
-          Deliciosa receta de pastel de chocolate con nueces molidas preparado todo
-          en la licuadora! Prepara este delicioso pastel de en tan solo 20 minutos.
-           Ideal para compartir con la familia en una tarde lluviosa
-        </p>
-      </section>
-      <section>
-      </section>
+
     <aside>
       <h3>Ganó Nilson</h3>
       <p>
@@ -64,16 +51,101 @@
            fue inolvidable.
       </p>
     </aside>
+
+    <section>
+      <article class="">
+          <h3 class="destacada">Receta destacada de la semana</h3>
+          <h4>PASTEL DE CHOCOLATE VIENÉS</h4>
+          <p>Por Maria Avila</p>
+            <ul>
+              <li>TIEMPO: 40 min</li>
+              <li>PORCIONES: 10</li>
+              <li>DIFICULTAD: Baja</li>
+            </ul>
+          <p>
+            Deliciosa receta de pastel de chocolate con nueces molidas preparado todo
+            en la licuadora! Prepara este delicioso pastel de en tan solo 20 minutos.
+             Ideal para compartir con la familia en una tarde lluviosa
+          </p>
+      </article>
+    </section>
+
+    <section>
+      <article class="">
+          <!-- <h3>Receta destacada de la semana</h3> -->
+          <h4>RECETAS DE ENSALADAS PARA VERANO</h4>
+          <!-- <p>Por Maria Avila</p> -->
+          <p>
+            Encuentra deliciosas recetas frescas ideales para el verano.
+            Aprende a preparar una rica ensalada de pollo,
+            ensalada de atún o cualquier ensalada fácil para disfrutar en el calor.
+          </p>
+            <ul>
+              <li><a href="#">Ensaladas de Pollo</a></li>
+              <li><a href="#">Ensaladas de Verduras</a></li>
+              <li><a href="#">Recetas de Ensaladas de Frutas</a></li>
+              <li><a href="#">Ensaladas de Atún</a></li>
+              <li><a href="#">Ensaladas de Papa</a></li>
+              <li><a href="#">Ensaladas Fáciles de Salmón</a></li>
+              <li><a href="#">Ensaladas de Pasta</a></li>
+              <li><a href="#">Aderezos y Vinagretas Caseros</a></li>
+            </ul>
+      </article>
+    </section>
+
+    <section>
+      <article class="">
+          <!-- <h3>Receta destacada de la semana</h3> -->
+          <h4>RECETAS DE CARNES ASADAS AL CARBÓN</h4>
+          <!-- <p>Por Maria Avila</p> -->
+          <p>
+            Encuentra las mejores recetas y tips de carnes asadas al carbón,
+            a tus amigos les encantar. Solo elige tu corte favorito,
+            el ingrediente y sigue los sencillos tips que te ofrecemos.
+          </p>
+
+            <ul>
+              <li><a href="#">Recetas de pollo asado</a></li>
+              <li><a href="#">Recetas de cordero asado</a></li>
+              <li><a href="#">Recetas de cerdo asado</a></li>
+              <li><a href="#">Recetas de pescado asado</a></li>
+            </ul>
+      </article>
+    </section>
+
+    <section>
+      <article class="">
+          <!-- <h3>Receta destacada de la semana</h3> -->
+          <h4>RECETAS DE POSTRES</h4>
+          <!-- <p>Por Maria Avila</p> -->
+          <p>
+            Las mejores recetas de postres para preparar en cualquier ocasión,
+            sorprende a tu familia, amigos o pareja con estas exquisitas recetas
+            que le encantarán, desde un fondant de chocolate hasta un delicioso cheesecake de fresas.
+          </p>
+
+            <ul>
+              <li><a href="#">Recetas de pasteles</a></li>
+              <li><a href="#">Recetas de cupcakes</a></li>
+              <li><a href="#">Recetas de galletas</a></li>
+              <li><a href="#">Recetas de pays</a></li>
+              <li><a href="#">Recetas de panqués</a></li>
+            </ul>
+      </article>
+    </section>
+
+
+
     <footer>
       <div id="imgContent">
         <figure>
-          <a href="#"><img src="img/facebook.png" alt="Facebook" alt=""></a>
+          <a href="#"><img src="img/facebook.png" alt="Facebook" title="Facebook" alt=""></a>
         </figure>
         <figure>
-          <a href="#"><img src="img/instagram.png" alt="Instagram" alt=""></a>
+          <a href="#"><img src="img/instagram.png" alt="Instagram" title="Instagram" alt=""></a>
         </figure>
         <figure>
-          <a href="#"><img src="img/twitter.png" alt="Twitter" alt=""></a>
+          <a href="#"><img src="img/twitter.png" alt="Twitter" title="Twitter" alt=""></a>
         </figure>
       </div>
       <div id="contactForm">
