--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </figure>
       <nav>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="competition.html">Contacto</a></li>
         </ul>
       </nav>
