Cambios en competition

--- a/competition.html
+++ b/competition.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/competition.css" type="text/css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,28 +10,86 @@
   <body>
     <header>
       <figure>
-        
         <a href="index.html">
-          <img src="img/logoText.png" alt="Logo MasterChef" id="logo">
-          <!-- <figcaption>MasterChef</figcaption> -->
+          <img src="img/logoText.jpg" alt="Logo MasterChef" id="logo">
         </a>
       </figure>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="competition.html">Contacto</a></li>
+          <li><a href="competition.html" style="color: grey">Contacto</a></li>
         </ul>
       </nav>
     </header>
-      <!-- <section>
+    <section>
+      <form id="formulario" action="success.html" method="post">
+        <h3>Inscríbete para el primer concurso de videos de cocina del Uruguay.</h3>
+        <p><cite>Todos los campos son obligatorios.</cite></p>
         <ul>
-          <li>Receta destacada</li>
-          <li>Recetas</li>
+          <li>
+            <label for="txtNombre">Nombre</label>
+            <input type="text" id="txtNombre" class="form" placeholder="Nombre" name="nombre" pattern="[A-Za-z]{30}" title="Nombre" required>
+            <!-- <input type="text" id="txtNombre" class="form" placeholder="Nombre" title="Nombre" required> -->
+          </li>
+          <li>
+            <label for="txtDireccion">Dirección</label>
+            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" pattern="[A-Za-z].{30}" required>
+          </li>
+          <li>
+            <label for="txtTelefono">Teléfono</label>
+            <input type="tel" id="txtTelefono" class="form" placeholder="Teléfono" pattern="[0-9]{14}" required>
+          </li>
+          <li>
+            <label for="txtEmail">E-mail</label>
+            <input type="email" id="txtEmail" class="form" placeholder="E-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
+          </li>
+          <li>
+            <label for="rdoGenero">Sexo</label>
+            <li class="lineal">
+              <input type="radio" name="genero" value="M" checked>
+              <label for="txtSexo">Masculino</label>
+              <input type="radio" name="genero" value="F">
+              <label for="txtSexo">Femenino</label>
+              <input type="radio" name="genero" value="O">
+              <label for="txtSexo">Otro</label>
+            </li>
+          </li>
+          <li>
+            <label for="txtDificultad">Dificultad</label>
+            <input type="text" id="txtDificultad" class="form" placeholder="Dificultad" required>
+          </li>
+          <li>
+            <label for="slcTipoPlato">Tipo de plato</label>
+            <select id="slcTipoPlato" required>
+              <option value="EN" selected>Entrada</option>
+              <option value="PR">Principal</option>
+              <option value="PO">Postre</option>
+            </select>
+          </li>
+          <li>
+            <label for="txtResumen">Resumen de la receta</label>
+            <textarea id="txtResumen" placeholder="Resumen de la receta" required></textarea>
+          </li>
+          <li class="lineal">
+            <label for="chkCondiciones">Acepta las condiciones establecidas en el concurso</label>
+            <input type="checkbox" id="chkCondiciones" required>
+          </li>
+          <p>
+            * "Constituyo el domicilio electrónico que registro en este formulario.
+            Además autorizo al servicio a realizar las comunicaciones y notificaciones
+            personales de los actos indicados en el cap. III del Instructivo de
+            Notificaciones Personales electrónicas al domicilio electrónico constituído.
+            Me obligo a comunicar, en la oficina donde fue constituído este dato, cualquier
+            dato en el domicilio electrónico que denuncio en el presente formulario.
+            Asimismo asumo la responsabilidad respecto al uso exclusivamente personal e
+            intransferible de la cuenta de correo electrónico constituida como domicilio
+            electrónico".
+          </p>
+          <label for="btnEnviar">Enviar formulario</label>
+          <input type="submit" id="btnEnviar" value="Enviar">
         </ul>
+      </form>
     </section>
-    <aside>
-        <p>Ganador del concurso</p>
-    </aside> -->
     <footer>
       <div id="imgContent">
         <figure>
