--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
       <figure>
         <a href="index.html">
-          <img src="img/logoText.png" alt="Logo MasterChef" id="logo">
+          <img src="img/logoText.jpg" alt="Logo MasterChef" id="logo">
           <!-- <figcaption>MasterChef</figcaption> -->
         </a>
       </figure>
       <nav>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index.html" style="color: grey">Inicio</a></li>
           <li><a href="competition.html">Contacto</a></li>
         </ul>
       </nav>
