--- a/competition.html
+++ b/competition.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="competition.html" style="color: grey">Contacto</a></li>
+          <li><a href="competition.html" class="active">Contacto</a></li>
         </ul>
       </nav>
     </header>
