boton en competition

--- a/competition.html
+++ b/competition.html
@@ -45,13 +45,13 @@
           </li>
           <li>
             <label for="rdoGenero">Sexo</label>
-            <li class="lineal">
+            <li id="lineal">
               <input type="radio" name="genero" value="M" checked>
-              <label for="txtSexo">Masculino</label>
+              <label for="txtSexo" class="font-normal">Masculino</label>
               <input type="radio" name="genero" value="F">
-              <label for="txtSexo">Femenino</label>
+              <label for="txtSexo" class="font-normal">Femenino</label>
               <input type="radio" name="genero" value="O">
-              <label for="txtSexo">Otro</label>
+              <label for="txtSexo" class="font-normal">Otro</label>
             </li>
           </li>
           <li>
@@ -85,8 +85,9 @@
             intransferible de la cuenta de correo electrónico constituida como domicilio
             electrónico".
           </p>
-          <label for="btnEnviar">Enviar formulario</label>
-          <input type="submit" id="btnEnviar" value="Enviar">
+          <p>
+            <a href="#" class="btnSuccess">Enviar</a>
+          </p>
         </ul>
       </form>
     </section>
