--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <figure>
         <a href="index.html">
-          <img src="img/logoText.png" alt="Logo MasterChef" id="logo">
+          <img src="img/logoText.jpg" alt="Logo MasterChef" id="logo">
           <!-- <figcaption>MasterChef</figcaption> -->
         </a>
       </figure>
