Arreglado el problema de el checkbox de las condiciones

--- a/competition.html
+++ b/competition.html
@@ -70,8 +70,8 @@
             <label for="txtResumen">Resumen de la receta</label>
             <textarea id="txtResumen" placeholder="Resumen de la receta" required></textarea>
           </li>
-          <li class="lineal">
-            <label for="chkCondiciones">Acepta las condiciones establecidas en el concurso</label>
+          <li>
+            <label for="chkCondiciones" class="linealCondiciones">Acepta las condiciones establecidas en el concurso</label>
             <input type="checkbox" id="chkCondiciones" required>
           </li>
           <p>
