--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
       <figure>
         <a href="index.html">
           <img src="img/logoText.jpg" alt="Logo MasterChef" id="logo">
-          <!-- <figcaption>MasterChef</figcaption> -->
         </a>
       </figure>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="competition.html">Contacto</a></li>
+          <li><a href="competition.html">Concurso</a></li>
         </ul>
       </nav>
     </header>
-
     <aside>
       <h2>Notícias</h2>
       <h3>Ganó Nilson</h3>
@@ -54,9 +52,12 @@
     </aside>
 
     <section>
-      <article class="">
+      <article>
           <h3 class="destacada">Receta destacada de la semana</h3>
           <h4>PASTEL DE CHOCOLATE VIENÉS</h4>
+          <figure>
+              <img src="img/torta.jpg" alt="Torta">
+          </figure>
           <p>Por Maria Avila</p>
             <ul>
               <li>TIEMPO: 40 min</li>
@@ -70,12 +71,16 @@
           </p>
       </article>
     </section>
-
     <section>
-      <article class="">
+      <article>
           <!-- <h3>Receta destacada de la semana</h3> -->
           <h4>RECETAS DE ENSALADAS PARA VERANO</h4>
           <!-- <p>Por Maria Avila</p> -->
+          <figure class="galeria">
+              <img src="img/ensalada.jpg" alt="Ensalada">
+              <img src="img/ensalada2.jpg" alt="Ensalada">
+              <img src="img/ensalada3.jpg" alt="Ensalada">
+          </figure>
           <p>
             Encuentra deliciosas recetas frescas ideales para el verano.
             Aprende a preparar una rica ensalada de pollo,
@@ -95,16 +100,20 @@
     </section>
 
     <section>
-      <article class="">
+      <article>
           <!-- <h3>Receta destacada de la semana</h3> -->
           <h4>RECETAS DE CARNES ASADAS AL CARBÓN</h4>
           <!-- <p>Por Maria Avila</p> -->
+          <figure class="galeria">
+              <img src="img/carnes.jpg" alt="Carnes">
+              <img src="img/carnes2.jpg" alt="Carnes">
+              <img src="img/carnes3.jpg" alt="Carnes">
+          </figure>
           <p>
             Encuentra las mejores recetas y tips de carnes asadas al carbón,
             a tus amigos les encantar. Solo elige tu corte favorito,
             el ingrediente y sigue los sencillos tips que te ofrecemos.
           </p>
-
             <ul>
               <li><a href="#">Recetas de pollo asado</a></li>
               <li><a href="#">Recetas de cordero asado</a></li>
@@ -115,16 +124,20 @@
     </section>
 
     <section>
-      <article class="">
+      <article>
           <!-- <h3>Receta destacada de la semana</h3> -->
           <h4>RECETAS DE POSTRES</h4>
           <!-- <p>Por Maria Avila</p> -->
+          <figure class="galeria">
+              <img src="img/postres.jpg" alt="Carnes">
+              <img src="img/postres2.jpg" alt="Carnes">
+              <img src="img/postres3.jpg" alt="Carnes">
+          </figure>
           <p>
             Las mejores recetas de postres para preparar en cualquier ocasión,
             sorprende a tu familia, amigos o pareja con estas exquisitas recetas
             que le encantarán, desde un fondant de chocolate hasta un delicioso cheesecake de fresas.
           </p>
-
             <ul>
               <li><a href="#">Recetas de pasteles</a></li>
               <li><a href="#">Recetas de cupcakes</a></li>
@@ -134,19 +147,16 @@
             </ul>
       </article>
     </section>
-
-
-
     <footer>
       <div id="imgContent">
         <figure>
-          <a href="https://www.facebook.com/elgourmet/" target="_blank"><img src="img/facebook.png" alt="Facebook" title="Facebook" alt="Facebook"></a>
+          <a href="https://www.facebook.com/elgourmet/" target="_blank"><img src="img/facebook.png" alt="Facebook" title="Facebook"></a>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/elgourmetoficial/" target="_blank"><img src="img/instagram.png" alt="Instagram" title="Instagram" alt="Instagram"></a>
+          <a href="https://www.instagram.com/elgourmetoficial/" target="_blank"><img src="img/instagram.png" alt="Instagram" title="Instagram"></a>
         </figure>
         <figure>
-          <a href="https://twitter.com/elgourmet" target="_blank"><img src="img/twitter.png" alt="Twitter" title="Twitter" alt="Twitter"></a>
+          <a href="https://twitter.com/elgourmet" target="_blank"><img src="img/twitter.png" alt="Twitter" title="Twitter"></a>
         </figure>
       </div>
       <div id="contactForm">
