--- a/success.html
+++ b/success.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="competition.html">Contacto</a></li>
+          <li><a href="competition.html">Concurso</a></li>
         </ul>
       </nav>
     </header>
@@ -29,13 +29,13 @@
     <footer>
       <div id="imgContent">
         <figure>
-          <a href="https://www.facebook.com/elgourmet/" target="_blank"><img src="img/facebook.png" alt="Facebook" title="Facebook" alt="Facebook"></a>
+          <a href="https://www.facebook.com/elgourmet/" target="_blank"><img src="img/facebook.png" alt="Facebook" title="Facebook"></a>
         </figure>
         <figure>
-          <a href="https://www.instagram.com/elgourmetoficial/" target="_blank"><img src="img/instagram.png" alt="Instagram" title="Instagram" alt="Instagram"></a>
+          <a href="https://www.instagram.com/elgourmetoficial/" target="_blank"><img src="img/instagram.png" alt="Instagram" title="Instagram"></a>
         </figure>
         <figure>
-          <a href="https://twitter.com/elgourmet" target="_blank"><img src="img/twitter.png" alt="Twitter" title="Twitter" alt="Twitter"></a>
+          <a href="https://twitter.com/elgourmet" target="_blank"><img src="img/twitter.png" alt="Twitter" title="Twitter"></a>
         </figure>
       </div>
       <div id="contactForm">
