--- a/competition.html
+++ b/competition.html
@@ -23,7 +23,7 @@
     </header>
     <section>
       <h3>Inscríbete para el primer concurso de videos de cocina del Uruguay.</h3>
-      <p><cite>Todos los campos son obligatorios.</cite></p>
+      <p>Todos los campos son obligatorios.</p>
       <form id="formulario" action="success.html" method="post">
         <ul>
           <li>
@@ -44,13 +44,13 @@
           </li>
           <li>
             <label for="rdoGenero">Sexo</label>
-            <li id="lineal">
+            <li id="radioButtons">
               <input type="radio" name="genero" value="M" checked>
-              <label for="txtSexo" class="font-normal">Masculino</label>
+              <label for="txtSexo">Masculino</label>
               <input type="radio" name="genero" value="F">
-              <label for="txtSexo" class="font-normal">Femenino</label>
+              <label for="txtSexo">Femenino</label>
               <input type="radio" name="genero" value="O">
-              <label for="txtSexo" class="font-normal">Otro</label>
+              <label for="txtSexo">Otro</label>
             </li>
           </li>
           <li>
@@ -70,7 +70,7 @@
             <textarea id="txtResumen" placeholder="Resumen de la receta" required></textarea>
           </li>
           <li>
-            <label for="chkCondiciones" class="linealCondiciones">Acepta las condiciones establecidas en el concurso</label>
+            <label for="chkCondiciones" class="inlineCondiciones">Acepta las condiciones</label>
             <input type="checkbox" id="chkCondiciones" required>
           </li>
           <p id="terminos">
