--- a/competition.html
+++ b/competition.html
@@ -91,10 +91,13 @@
       </form>
     </section>
     <aside>
+      <h4>¿Dónde estamos?</h4>
+      <p>Plaza Independencia</p>
+      <p>Montevieo, Uruguay</p>
       <iframe
         frameborder="0" style="border:0"
         src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDN85JjhIBzBjTGGnBeU9dOV2DzDulrbg4
-          &q=Montevideo,+Uruguay/" allowfullscreen>
+          &q=Montevideo,+Uruguay+,Plaza%Independencia/" allowfullscreen>
       </iframe>
     </aside>
     <footer>
