--- a/success.html
+++ b/success.html
@@ -21,11 +21,11 @@
         </ul>
       </nav>
     </header>
-    <section id="success">
+    <div id="success">
       <h2>Formulario enviado con éxito.</h2>
       <p>Ya puede volver al menu principal</p>
       <a href="index.html" class="btnSuccess">Volver</a>
-    </section>
+    </div>
     <footer>
       <div id="imgContent">
         <figure>
