--- a/ejericio_1/success.html
+++ b/ejericio_1/success.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>elgourmet</title>
   </head>
   <body>
     <header>
