--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
-  <body>
-
+  <body class="container-fluid">
+    <header>
+      <figure>
+        <a href="index.html">
+          <img src="img/logoText.jpg" alt="Logo MasterChef" id="logo">
+        </a>
+      </figure>
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="competition.html">Concurso</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
