--- a/ejericio_1/competition.html
+++ b/ejericio_1/competition.html
@@ -28,11 +28,11 @@
         <ul>
           <li>
             <label for="txtNombre">Nombre</label>
-            <input type="text" id="txtNombre" class="form" placeholder="Nombre" name="nombre" required>
+            <input type="text" id="txtNombre" class="form" placeholder="Nombre" pattern="[A-Za-z]{0,30}" required>
           </li>
           <li>
             <label for="txtDireccion">Dirección</label>
-            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" required>
+            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" pattern="[0]" required>
           </li>
           <li>
             <label for="txtTelefono">Teléfono</label>
