--- a/ejericio_1/success.html
+++ b/ejericio_1/success.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="competition.html">Concurso</a></li>
+          <li><a href="competition.html" class="active">Concurso</a></li>
         </ul>
       </nav>
     </header>
