--- a/ejericio_1/index.html
+++ b/ejericio_1/index.html
@@ -16,8 +16,8 @@
       </figure>
       <nav>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="competition.html" class="active">Concurso</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="competition.html">Concurso</a></li>
         </ul>
       </nav>
     </header>
