Cambios por errores con patterns.

--- a/ejericio_1/competition.html
+++ b/ejericio_1/competition.html
@@ -28,15 +28,15 @@
         <ul>
           <li>
             <label for="txtNombre">Nombre</label>
-            <input type="text" id="txtNombre" class="form" placeholder="Nombre" pattern="[A-Za-z]{0,30}" required>
+            <input type="text" id="txtNombre" class="form" placeholder="Nombre" pattern="[A-Za-z\]{0,30}" required>
           </li>
           <li>
             <label for="txtDireccion">Dirección</label>
-            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" pattern="[A-Za-z0-9\.]{0,20}" required>
+            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" pattern="[A-Za-z0-9\.\]{0,20}" required>
           </li>
           <li>
             <label for="txtTelefono">Teléfono</label>
-            <input type="tel" id="txtTelefono" class="form" placeholder="Teléfono" pattern="[0-9]{0,14}" required>
+            <input type="tel" id="txtTelefono" class="form" placeholder="Teléfono" pattern="[0-9\]{0,14}" required>
           </li>
           <li>
             <label for="txtEmail">E-mail</label>
