--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -4,20 +4,243 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="container-fluid">
-    <header>
-      <figure>
-        <a href="index.html">
-          <img src="img/logoText.jpg" alt="Logo MasterChef" id="logo">
-        </a>
-      </figure>
-      <nav class="navbar">
-        <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="competition.html">Concurso</a></li>
+<header>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <img src="img/logo1.png" class="navbar-brand"  alt="">
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
         </ul>
-      </nav>
-    </header>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+<header>
+
+
+
+  <section class="row">
+    <div id="myCarousel" class="carousel slide col-md-8 col-md-offset-2" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="img/slider1.jpg" alt="Los Angeles" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="img/slider2.jpg" alt="Chicago" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="img/slider3.jpg" alt="New york" style="width:100%;">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+  </section>
+
+<section class="row">
+  <h2 class="text-center">La gran final</h2>
+  <p class="col-md-10 col-md-offset-1">
+      Llegó el tan esperado final de la primera temporada de MasterChef Uruguay, el reality de cocina más importante del mundo, ahora hecho en nuestro país.
+      En un clima de gran tensión, los cuatro participantes que todavía estaban en carrera se enfrentaron uno contra uno, en dos semifinales determinadas por sorteo:  Lourdes vs. Nilson  y  Leticia vs. Nicolás.
+      Los dos ganadores, Leticia y Nilson, pasaron a la final, donde tuvieron 120 minutos para sorprender al jurado con tres platos: entrada, plato principal y postre. Pese a los nervios y la presión de la instancia que estaban atravesando, ambos participantes tuvieron un gran desempeño en la última prueba de la competencia, lo que hizo que la decisión del jurado no fuera nada sencilla.
+      Finalmente, Lucía, Sergio y Laurent dieron su veredicto y Nilson se convirtió en el primer maestro de la cocina de nuestro país. La alegría y la emoción se apoderaron de la cocina de MasterChef Uruguay y el festejo del ganador con su familia y sus excompañeros fue inolvidable.
+  </p>
+</section>
+
+<section class="row">
+  <h2 class="text-center">Pruebas</h2>
+  <div class="col-md-3">
+    <h4 class="text-center">Caja misteriosa</h4>
+    En esta prueba tienen una caja que oculta los ingredientes o las cosas que puede haber en la caja. Con lo que tienen en la caja tienen que cocinar un plato con los ingredientes o las cosas que haya en la caja y sin poder ir al mercado, pueden usar todos los ingredientes que quieran ya sea 1 o todos.
+  </div>
+
+  <div class="col-md-3">
+    <h4 class="text-center">Prueba de eliminación</h4>
+    En esta prueba estarán los peores platos de la prueba anterior. Tienen que cocinar cualquier plato, pero ese plato tiene que tener un ingrediente principal elegido por los Chefs (en cada prueba de eliminación el ingrediente principal sera distinto) En esta prueba siempre hay solo 1 perdedor, que es el queda eliminado de MasterChef. Esta es la única prueba que esta en todos los episodios.
+  </div>
+
+  <div class="col-md-3">
+    <h4 class="text-center">Prueba por equipos</h4>
+    En esta prueba se divide a la mitad los concursantes que hayan (equipo azul y rojo), cada equipo tiene un capitán que es el que elige a sus compañeros de equipo y el que elige que platos hacer. Los capitanes casi siempre son los 2 ganadores de la prueba anterior. Siempre en esta prueba los jurados no son los Chefs principales sino otras personas y siempre son muchas personas.
+  </div>
+
+  <div class="col-md-3">
+    <h4 class="text-center">Desafío en duplas</h4>
+    En esta prueba se formaran equipos de a 2 participantes. Tienen que hacer un plato elegido por cada equipo y hacerlo. Mientras uno cocina el otro se queda a un costado y le puede ayudar habladle y dolando consejos o advertirle algo pero no le puede ayudar cocinando o tocando algo. Después de determinado tiempo rotan y el que cocinaba, se queda a un costado hablándole y el otro cocina. Siempre rotan más de 1 vez.
+  </div>
+
+</section>
+
+<section class="row">
+  <h2 class="text-center">Participantes</h2>
+  <figure class="col-md-3">
+      <figcaption class="text-center"><h4>Leticia</h4></figcaption>
+      <img src="img/participante2.jpg" style="width:100%;"alt="">
+      <figcaption>Tiene 35 años y vive en Libertad -San José-.
+      Tiene tres hijos, de 1, 3 y 4 años.
+      Se define como detallista, innovadora, aplicada y le cuesta delegar.
+    </figcaption>
+  </figure>
+
+  <figure class="col-md-3">
+      <figcaption class="text-center"><h4>Lourdes</h4></figcaption>
+      <img src="img/participante1.jpg" style="width:100%;"alt="">
+      <figcaption>
+        Tiene 37 años y vive en Piedras Blancas. Tiene 18 hermanos y dos hijos de 16 y 10 años.
+        No tuvo oportunidad de ir al liceo. Es limpiadora y estampadora.
+    </figcaption>
+  </figure>
+
+  <figure class="col-md-3">
+      <figcaption class="text-center"><h4>Nicolás</h4></figcaption>
+      <img src="img/participante3.jpg" style="width:100%;"alt="">
+      <figcaption>
+        Tiene 35 años y es odontólogo.
+        Su abuelo era italiano y tuvo una fábrica de pastas en nuestro país; de ahí heredó su amor por la gastronomía. 
+      </figcaption>
+  </figure>
+
+  <figure class="col-md-3" data-toggle="modal" data-target="#exampleModalLong">
+      <figcaption class="text-center"><h4>Nilson</h4></figcaption>
+      <img src="img/participante4.jpg" style="width:100%;"alt="">
+      <figcaption>
+      Tiene 36 años y es de Pueblo Mendoza, en el Departamento de Florida. Está en pareja y tiene dos hijos chicos.
+    </figcaption>
+  </figure>
+</section>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title text-center" id="exampleModalLongTitle">El Ganador</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>La final de la primera edición de Master Chef Uruguay generó que miles de mensajes fueran publicados en redes sociales.
+          Nilson Viazzo se convirtió en el primer ganador de la edición uruguaya de este formato internacional donde cocineros amateurs compiten por ser un master chef.</p>
+        <p>Bajo el hashtag #ElNilsonDeLaGente y #Nilson el policía de 36 años oriundo de la localidad de Mendoza en el departamento de Florida acaparó la atención de
+          miles de uruguayos quienes además convirtieron en trending topic (tendencia mundial ) en la red social Twitter.</p>
+        <p>Además, recibió el saludos del Ministerio del Interior y del intendente de Florida.</p>
+        <p>Trabaja en la Policía, en la parte de mantenimiento, como carpintero.</p>
+        <p>Sus abuelos tenían campo y a él le gustaba mucho estar allí, tanto que llegó a estudiar algunos años para ser Ingeniero Agrónomo.</p>
+        <p>Su madre le transmitió el amor por la cocina y dice que se tendría que haber dedicado a la gastronomía, por lo que participar en MasterChef Uruguay es una satisfacción tremenda, ¡y mucho más ganarlo! Su sueño es tener su propio emprendimiento gastronómico.</p>
+        <p>Se define como sencillo y muy familiero, respetuoso, soñador y algo competitivo.</p>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>Chefs de referencia</td>
+              <td>Francis Mallmann, Ariel Rodríguez e Ignacio Mattos</td>
+            </tr>
+            <tr>
+              <td>Plato estrella</td>
+              <td>bifes de bondiola al disco con verduras acompañados de papines con cáscara dorados en manteca y hierbas</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <section class="row">
+    <h2 class="text-center">Finalistas</h2>
+    <div class="col-md-6">
+      <img src="img/participantes_finalistas.jpg" style="width:100%;" alt="">
+    </div>
+    <div class="col-md-6" style="margin-top:10%;">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Edad</th>
+            <th>Ocupacion</th>
+            <th>Estado</th>
+            <th>Dias</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Nilson Viazzo</td>
+            <td>36</td>
+            <td>Policía</td>
+            <td>Campeón</td>
+            <td>92</td>
+          </tr>
+          <tr>
+            <td>Leticia Cicero</td>
+            <td>35</td>
+            <td>Ingeniera química</td>
+            <td>Subcampeona</td>
+            <td>92</td>
+          </tr>
+          <tr>
+            <td>Nicolás Rolandi</td>
+            <td>35</td>
+            <td>Odontólogo</td>
+            <td>Semifinalista</td>
+            <td>92</td>
+          </tr>
+          <tr>
+            <td>Lourdes Galván</td>
+            <td>37</td>
+            <td>Empleada</td>
+            <td>Semifinalista</td>
+            <td>92</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+  <script type="text/javascript" src="js/jquery-3.2.1.slim.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
   </body>
 </html>
