--- a/ejericio_1/competition.html
+++ b/ejericio_1/competition.html
@@ -28,19 +28,19 @@
         <ul>
           <li>
             <label for="txtNombre">Nombre</label>
-            <input type="text" id="txtNombre" class="form" placeholder="Nombre" pattern="[A-Za-z\]{0,30}" required>
+            <input type="text" id="txtNombre" class="form" placeholder="Nombre" required>
           </li>
           <li>
             <label for="txtDireccion">Dirección</label>
-            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" pattern="[A-Za-z0-9\.\]{0,20}" required>
+            <input type="text" id="txtDireccion" class="form" placeholder="Dirección" required>
           </li>
           <li>
             <label for="txtTelefono">Teléfono</label>
-            <input type="tel" id="txtTelefono" class="form" placeholder="Teléfono" pattern="[0-9\]{0,14}" required>
+            <input type="tel" id="txtTelefono" class="form" placeholder="Teléfono" required>
           </li>
           <li>
             <label for="txtEmail">E-mail</label>
-            <input type="email" id="txtEmail" class="form" placeholder="E-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
+            <input type="email" id="txtEmail" class="form" placeholder="E-mail" required>
           </li>
           <li>
             <label for="rdoGenero">Sexo</label>
