--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="container-fluid">
+
 <header>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -18,69 +18,69 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <img src="img/logo1.png" class="navbar-brand"  alt="">
+        <figure>
+          <a href="index.html">
+            <img src="img/logo3.png" alt="Logo MasterChef" id="logo">
+          </a>
+        </figure>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#laGranFinal">La gran final</a></li>
+              <li><a href="#multimedia">Multimedia</a></li>
+              <li><a href="#equipo">Equipo</a></li>
+              <li><a href="#pruebas">Pruebas</a></li>
+              <li><a href="#participantes">Participantes</a></li>
+              <li><a href="#premios">Premios</a></li>
+              <li><a href="#posiciones">Posiciones</a></li>
             </ul>
           </li>
         </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+      </div>
+    </div>
   </nav>
-<header>
+</header>
 
+<section class="row" id="slide">
+  <div id="myCarousel" class="carousel slide col-md-8 col-md-offset-2" data-ride="carousel">
 
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
 
-  <section class="row">
-    <div id="myCarousel" class="carousel slide col-md-8 col-md-offset-2" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-          <div class="item active">
-            <img src="img/slider1.jpg" alt="Los Angeles" style="width:100%;">
-          </div>
-
-          <div class="item">
-            <img src="img/slider2.jpg" alt="Chicago" style="width:100%;">
-          </div>
-
-          <div class="item">
-            <img src="img/slider3.jpg" alt="New york" style="width:100%;">
-          </div>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="img/slider1.jpg" alt="Los Angeles" style="width:100%;">
         </div>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="item">
+          <img src="img/slider2.jpg" alt="Chicago" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="img/slider3.jpg" alt="New york" style="width:100%;">
+        </div>
       </div>
-  </section>
+
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+</section>
 
 <section class="row">
-  <h2 class="text-center">La gran final</h2>
+  <h2 class="text-center" id="laGranFinal">La gran final</h2>
   <p class="col-md-10 col-md-offset-1">
       Llegó el tan esperado final de la primera temporada de MasterChef Uruguay, el reality de cocina más importante del mundo, ahora hecho en nuestro país.
       En un clima de gran tensión, los cuatro participantes que todavía estaban en carrera se enfrentaron uno contra uno, en dos semifinales determinadas por sorteo:  Lourdes vs. Nilson  y  Leticia vs. Nicolás.
@@ -90,64 +90,107 @@
 </section>
 
 <section class="row">
-  <h2 class="text-center">Pruebas</h2>
+  <h2 class="text-center" id="multimedia">Multimedia</h2>
+  <video class="col-md-10 col-md-offset-1" controls preload="none" poster="img/plazaindep.jpg">
+    <source src="movies/video.mp4" type="video/mp4">
+    <source src="movies/video.ogv" type="video/ogv">
+    <source src="movies/video.webm" type="video/webm">
+      <p>No se puede reproducir el video</p>
+  </video>
+</section>
+
+<section class="row">
+  <h2 class="text-center" id="equipo">Equipo</h2>
+  <figure class="col-xs-6 col-md-3">
+    <figcaption class="text-center"><h4>Diego González</h4></figcaption>
+      <img src="img/conductor.jpg" style="width:100%;" alt="conductor">
+    <figcaption>
+  </figure>
+  <figure class="col-xs-6 col-md-3">
+    <figcaption class="text-center"><h4>Sergio Puglia</h4></figcaption>
+      <img src="img/jurado1.jpg" style="width:100%;" alt="jurado1">
+    <figcaption>
+  </figure>
+  <figure class="col-xs-6 col-md-3">
+    <figcaption class="text-center"><h4>Lucía Soria</h4></figcaption>
+      <img src="img/jurado2.jpg" style="width:100%;">
+    <figcaption>
+  </figure>
+  <figure class="col-xs-6 col-md-3">
+    <figcaption class="text-center"><h4>Laurent Lainé</h4></figcaption>
+      <img src="img/jurado3.jpg" style="width:100%;">
+    <figcaption>
+  </figure>
+</section>
+
+<section class="row">
+  <h2 class="text-center" id="pruebas">Pruebas</h2>
   <div class="col-md-3">
     <h4 class="text-center">Caja misteriosa</h4>
-    En esta prueba tienen una caja que oculta los ingredientes o las cosas que puede haber en la caja. Con lo que tienen en la caja tienen que cocinar un plato con los ingredientes o las cosas que haya en la caja y sin poder ir al mercado, pueden usar todos los ingredientes que quieran ya sea 1 o todos.
+    <p>
+      En esta prueba tienen una caja que oculta los ingredientes o las cosas que puede haber en la caja. Con lo que tienen en la caja tienen que cocinar un plato con los ingredientes o las cosas que haya en la caja y sin poder ir al mercado, pueden usar todos los ingredientes que quieran ya sea 1 o todos.
+    </p>
   </div>
 
   <div class="col-md-3">
     <h4 class="text-center">Prueba de eliminación</h4>
-    En esta prueba estarán los peores platos de la prueba anterior. Tienen que cocinar cualquier plato, pero ese plato tiene que tener un ingrediente principal elegido por los Chefs (en cada prueba de eliminación el ingrediente principal sera distinto) En esta prueba siempre hay solo 1 perdedor, que es el queda eliminado de MasterChef. Esta es la única prueba que esta en todos los episodios.
+    <p>
+      En esta prueba estarán los peores platos de la prueba anterior. Tienen que cocinar cualquier plato, pero ese plato tiene que tener un ingrediente principal elegido por los Chefs (en cada prueba de eliminación el ingrediente principal sera distinto) En esta prueba siempre hay solo 1 perdedor, que es el queda eliminado de MasterChef. Esta es la única prueba que esta en todos los episodios.
+    </p>
   </div>
 
   <div class="col-md-3">
     <h4 class="text-center">Prueba por equipos</h4>
-    En esta prueba se divide a la mitad los concursantes que hayan (equipo azul y rojo), cada equipo tiene un capitán que es el que elige a sus compañeros de equipo y el que elige que platos hacer. Los capitanes casi siempre son los 2 ganadores de la prueba anterior. Siempre en esta prueba los jurados no son los Chefs principales sino otras personas y siempre son muchas personas.
+    <p>
+      En esta prueba se divide a la mitad los concursantes que hayan (equipo azul y rojo), cada equipo tiene un capitán que es el que elige a sus compañeros de equipo y el que elige que platos hacer. Los capitanes casi siempre son los 2 ganadores de la prueba anterior. Siempre en esta prueba los jurados no son los Chefs principales sino otras personas y siempre son muchas personas.
+    </p>
   </div>
 
   <div class="col-md-3">
     <h4 class="text-center">Desafío en duplas</h4>
-    En esta prueba se formaran equipos de a 2 participantes. Tienen que hacer un plato elegido por cada equipo y hacerlo. Mientras uno cocina el otro se queda a un costado y le puede ayudar habladle y dolando consejos o advertirle algo pero no le puede ayudar cocinando o tocando algo. Después de determinado tiempo rotan y el que cocinaba, se queda a un costado hablándole y el otro cocina. Siempre rotan más de 1 vez.
+    <p>
+      En esta prueba se formaran equipos de a 2 participantes. Tienen que hacer un plato elegido por cada equipo y hacerlo. Mientras uno cocina el otro se queda a un costado y le puede ayudar habladle y dolando consejos o advertirle algo pero no le puede ayudar cocinando o tocando algo. Después de determinado tiempo rotan y el que cocinaba, se queda a un costado hablándole y el otro cocina. Siempre rotan más de 1 vez.
+    </p>
   </div>
 
 </section>
 
 <section class="row">
-  <h2 class="text-center">Participantes</h2>
-  <figure class="col-md-3">
+  <h2 class="text-center" id="participantes">Participantes</h2>
+  <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Leticia</h4></figcaption>
-      <img src="img/participante2.jpg" style="width:100%;"alt="">
+      <img src="img/participante2.jpg" style="width:100%;" alt="participante 2">
       <figcaption>Tiene 35 años y vive en Libertad -San José-.
       Tiene tres hijos, de 1, 3 y 4 años.
       Se define como detallista, innovadora, aplicada y le cuesta delegar.
     </figcaption>
   </figure>
 
-  <figure class="col-md-3">
+  <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Lourdes</h4></figcaption>
-      <img src="img/participante1.jpg" style="width:100%;"alt="">
+      <img src="img/participante1.jpg" style="width:100%;" alt="participante 1">
       <figcaption>
         Tiene 37 años y vive en Piedras Blancas. Tiene 18 hermanos y dos hijos de 16 y 10 años.
         No tuvo oportunidad de ir al liceo. Es limpiadora y estampadora.
     </figcaption>
   </figure>
 
-  <figure class="col-md-3">
+  <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Nicolás</h4></figcaption>
-      <img src="img/participante3.jpg" style="width:100%;"alt="">
+      <img src="img/participante3.jpg" style="width:100%;" alt="participante 3">
       <figcaption>
         Tiene 35 años y es odontólogo.
         Su abuelo era italiano y tuvo una fábrica de pastas en nuestro país; de ahí heredó su amor por la gastronomía. 
       </figcaption>
   </figure>
 
-  <figure class="col-md-3" data-toggle="modal" data-target="#exampleModalLong">
+  <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Nilson</h4></figcaption>
-      <img src="img/participante4.jpg" style="width:100%;"alt="">
+      <img src="img/participante4.jpg" style="width:100%;" alt="participante 4">
       <figcaption>
       Tiene 36 años y es de Pueblo Mendoza, en el Departamento de Florida. Está en pareja y tiene dos hijos chicos.
     </figcaption>
+    <p data-toggle="modal" data-target="#exampleModalLong" style="color: rgb(208, 33, 61)">[Conocer más]</p>
   </figure>
 </section>
 
@@ -157,6 +200,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title text-center" id="exampleModalLongTitle">El Ganador</h3>
+        <figure>
+            <img src="img/ganador.jpg" alt="" style="width:100%;">
+        </figure>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -191,8 +237,17 @@
   </div>
 </div>
 
+<section class="row">
+  <h2 class="text-center" id="premios">Premios</h2>
+  <div class="col-md-12">
+    <p>
+      Además del trofeo de primer MasterChef de nuestro país, Nilson ganó: $U 200.000 en efectivo, un curso de repostería o cocina profesional en el Instituto Crandon Gastronómico; un viaje a Girona, España, para tomar clases en el El Celler de Can Roca (restaurant galardonado con tres estrellas Michelín); y  dos fines de semana en el hotel Radisson Victoria Plaza Hotel. Leticia, por su parte, además del reconocimiento del público, el jurado y la audiencia, se llevó una cocina completa con equipamiento Bosch y dos fines de semana en el Radisson Victoria Plaza Hotel.
+    </p>
+  </div>
+</section>
+
   <section class="row">
-    <h2 class="text-center">Finalistas</h2>
+    <h2 class="text-center" id="posiciones">Posiciones</h2>
     <div class="col-md-6">
       <img src="img/participantes_finalistas.jpg" style="width:100%;" alt="">
     </div>
