--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -159,7 +159,7 @@
   <h2 class="text-center" id="participantes">Participantes</h2>
   <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Leticia</h4></figcaption>
-      <img src="img/participante2.jpg" style="width:100%;" alt="participante 2">
+      <img src="img/participantes/participante2_simple.jpg" id="img2" style="width:100%;" alt="participante 2">
       <figcaption>Tiene 35 años y vive en Libertad -San José-.
       Tiene tres hijos, de 1, 3 y 4 años.
       Se define como detallista, innovadora, aplicada y le cuesta delegar.
@@ -168,7 +168,7 @@
 
   <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Lourdes</h4></figcaption>
-      <img src="img/participante1.jpg" style="width:100%;" alt="participante 1">
+      <img src="img/participantes/participante1_simple.jpg" id="img1" style="width:100%;" alt="participante 1">
       <figcaption>
         Tiene 37 años y vive en Piedras Blancas. Tiene 18 hermanos y dos hijos de 16 y 10 años.
         No tuvo oportunidad de ir al liceo. Es limpiadora y estampadora.
@@ -177,7 +177,7 @@
 
   <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Nicolás</h4></figcaption>
-      <img src="img/participante3.jpg" style="width:100%;" alt="participante 3">
+      <img src="img/participantes/participante3_simple.jpg" id="img3" style="width:100%;" alt="participante 3">
       <figcaption>
         Tiene 35 años y es odontólogo.
         Su abuelo era italiano y tuvo una fábrica de pastas en nuestro país; de ahí heredó su amor por la gastronomía. 
@@ -186,11 +186,11 @@
 
   <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Nilson</h4></figcaption>
-      <img src="img/participante4.jpg" style="width:100%;" alt="participante 4">
+      <img src="img/participantes/participante4_simple.jpg" id="img4" style="width:100%;" alt="participante 4">
       <figcaption>
       Tiene 36 años y es de Pueblo Mendoza, en el Departamento de Florida. Está en pareja y tiene dos hijos chicos.
     </figcaption>
-    <p data-toggle="modal" data-target="#exampleModalLong" style="color: rgb(208, 33, 61)">[Conocer más]</p>
+    <a href="" data-toggle="modal" data-target="#exampleModalLong" style="text-decoration:none;color: rgb(208, 33, 61)">[Conocer más]</a>
   </figure>
 </section>
 
@@ -297,5 +297,6 @@
   </section>
   <script type="text/javascript" src="js/jquery-3.2.1.slim.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/image_change.js"></script>
   </body>
 </html>
