--- a/ejericio_1/success.html
+++ b/ejericio_1/success.html
@@ -8,6 +8,7 @@
     <title>elgourmet</title>
   </head>
   <body>
+
     <header>
       <figure>
         <a href="index.html">
@@ -21,11 +22,13 @@
         </ul>
       </nav>
     </header>
-    <div id="success">
+
+    <main>
       <h2>Formulario enviado con éxito.</h2>
       <p>Ya puede volver al menu principal</p>
       <a href="index.html" class="btnSuccess">Volver</a>
-    </div>
+    </main>
+
     <footer>
       <div id="imgContent">
         <figure>
@@ -51,5 +54,6 @@
         </ul>
       </div>
     </footer>
+
   </body>
 </html>
