Push cambios en js.

--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>masterchef</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -155,7 +155,7 @@
 
 </section>
 
-<section class="row">
+<section class="row" id="participantes">
   <h2 class="text-center" id="participantes">Participantes</h2>
   <figure class="col-xs-6 col-md-3">
       <figcaption class="text-center"><h4>Leticia</h4></figcaption>
