--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -261,7 +261,7 @@
       <div class="col-md-6 col-md-offset-0 col-xs-8 col-xs-offset-2">
         <img src="img/participantes_finalistas.jpg" style="width:100%;" alt="">
       </div>
-      <div class="col-md-6 table-responsive" style="margin-top:10%;">
+      <div class="col-md-6 col-xs-12 table-responsive" style="margin-top:10%;">
         <table class="table">
           <thead>
             <tr>
